# picpay-mlengineer-pleno

./: README.md
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/: main.py
app/src/api/: errors.py
app/src/api/routes/: __init__.py  health.py  model.py
app/src/core/: app.py  events.py
app/src/db/: sqlite.py
app/src/dependencies/: model.py  sqlite.py  state.py
app/src/models/: features.py  weights.py
app/src/services/: models.py
app/src/tests/: conftest.py  test_integration.py
notebook/: Notebook.ipynb  pyproject.toml
notebook/models/: model_params.pkl
