[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Jonathan Bispo <jonathanbispo.pessoal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
pyspark = "^3.5.1"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.0"
pandas-stubs = "^2.2.2.240603"
ipykernel = "^6.29.5"
nbqa = "^1.8.5"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]